fix: Fix list overflow issue

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -24,5 +24,5 @@
 }
 
 .cartomancy-list .cartomancy-cards {
-  height: 100%;
+  height: calc(100% - 30px);
 }
